...
                    Button {
                        model.startRecording()
                    } label: {
                        Label("Start Recording", systemImage: "record.circle")
                    }
                    .disabled(model.isRecording)
                    .accessibilityIdentifier("AppleLocationControls.StartRecording")

                    Button {
                        model.stopRecording()
                    } label: {
                        Label("Stop Recording", systemImage: "stop.circle")
                    }
                    .disabled(!model.isRecording)
                    .accessibilityIdentifier("AppleLocationControls.StopRecording")
                }

                Button {
                    showingExporter = true
                } label: {
                    Label("Export", systemImage: "square.and.arrow.up")
...
